--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ img {
 
 .benefits_cards {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     padding: 35px 45px 112px 100px;
 }
 
