--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,31 @@ img{
     opacity: .75;
 }
 
+.header__burger{
+    display: none;
+    width: 40px;
+    height: 28px;
+    position: relative;
+}
+.burger__line{
+    display: block;
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    background-color: white;
+    left: 0;
+}
+.line__first{
+    top: 0;
+}
+.line__second{
+    top: 50%;
+    transform: translateY(-50%);
+}
+.line__third{
+    bottom: 0;
+}
+
 /* Header styles end */
 
 
@@ -492,7 +517,7 @@ img{
 /* Intro styles start */
 
 .intro{
-    min-height: 100vh;
+    height: 100%;
     background: url(../img/intro.jpg) no-repeat center;
     background-size: cover;
     padding-top: 263px;
@@ -940,3 +965,146 @@ img{
 }
 
 /* Footer styles end */
+
+
+/* Media start */
+
+@media screen and (max-width: 767px) {
+    .header__burger{
+        display: block;
+    }
+    .header__nav{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-color: #0E1D28;
+        z-index: 10;
+        padding: 75px;
+        transform: translateX(100%);
+        transition: 0.2s all linear;
+    }
+    .header__nav_active{
+        transform: translateX(0);
+    }
+    .header__item{
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    .header__item:last-child{
+        margin-bottom: 0;
+    }
+    .header__link{
+        line-height: 48px;
+        font-size: 42px;
+    }
+    .header__close{
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 11;
+    }
+    .burger__close-line{
+        display: block;
+        height: 2px;
+        width: 100%;
+        background-color: white;
+        position: absolute;
+        top: 50%;
+    }
+    .burger__close-line:first-child{
+    transform: translateY(-50%) rotate(45deg);
+    }
+    .burger__close-line:last-child{
+        transform: translateY(-50%) rotate(-45deg);
+    }
+    .intro{
+        padding-top: 180px;
+    }
+    .search-form__field{
+        width: 100%;
+        margin-right: 0;
+    }
+    .benefits__card{
+        grid-column: span 3;
+    }    
+    .tour__pic, .tour__info{
+        grid-column: span 2;
+    }
+    .tour__pic_mob_first{
+        grid-row-start: -1;
+    }
+    .top__card{
+        grid-column: span 6;
+    }
+    .top__card-stats  {
+        max-width: 386px;
+    }
+    .footer__logo{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .footer__nav{
+        width: 100%;
+    }
+    }
+
+@media screen and (max-width: 960px) {
+    .intro__title{
+        margin: 0 auto;
+        text-align: center;
+        padding-bottom: 22px;
+    }
+    .intro__subtitle{
+        margin: 0 auto;
+        text-align: center;
+        padding-bottom: 59px;
+    }
+    .search-form__field{
+        margin: 0 auto;
+        margin-bottom: 25px;
+    }
+    .search-form__submit{
+        margin: 0 auto;
+    }
+    .benefits__title{
+        padding: 60px 0px 46px 15px;
+    }
+    .benefits__cards{
+        padding: 0 15px;
+        grid-column-gap: 35px;
+    }
+    .benefits__wrap{
+        box-shadow: none;
+    }
+    .benefits__card{
+        margin-bottom: 60px;
+    }
+    .benefits{
+        margin-bottom: 40px;
+    }
+    .places__card{
+        grid-column: span 6;
+    }
+    .tour__title{
+        margin-bottom: 20px;
+    }
+    .tour__desc{
+        margin-bottom: 20px;
+    }
+    .tours__tour{
+        grid-gap: 50px;
+    }
+    .tour__info{
+        padding-left: 0;
+    }
+    .top__cards{
+        grid-gap: 20px;
+    }
+}
+
+/* Media end */
